resize svg by adding col padding to main div

--- a/index.html
+++ b/index.html
@@ -11,7 +11,15 @@
   <link rel="stylesheet" href="css/cabildos.css">
 </head>
 <body>
-  <div id="cabildos">
+  <div class="row">
+    <div class="col-2">
+    </div>
+    <div class="col-8">
+      <div id="cabildos">
+      </div>
+    </div>
+    <div class="col-2">
+    </div>
   </div>
   <script src="js/d3.min.js"></script>
   <script src="js/cabildos.js"></script>
