--- a/index.html
+++ b/index.html
@@ -15,7 +15,32 @@
     <div class="col-2">
     </div>
     <div class="col-8">
-      <div id="cabildos">
+      <div class="row">
+        <div class="col-4">
+          <div class="form-group">
+           <label for="select-cabildo">Cabildo</label>
+           <select class="form-control" id="select-cabildo">
+           </select>
+         </div>
+       </div>
+       <div class="col-4">
+         <div class="form-group">
+          <label for="select-comision">Comision</label>
+          <select class="form-control" id="select-comision">
+          </select>
+        </div>
+      </div>
+      <div class="col-4">
+        <div class="form-group">
+         <label for="select-tema">Tema</label>
+         <select class="form-control" id="select-tema">
+         </select>
+       </div>
+     </div>
+      </div>
+      <div class="row">
+        <div id="cabildos">
+        </div>
       </div>
     </div>
     <div class="col-2">
