--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <div class="row">
     <div class="col-12">
-      <div class="row">
+      <div class="row" id="sticky">
         <div class="col-3">
           <div class="form-group">
              <label for="select-cabildo">Cabildo</label>
@@ -35,12 +35,25 @@
           </div>
         </div>
       </div>
-      <div class="row">
+      <div class="row" id="bubbles">
         <div class="col-4">
         </div>
         <div class="col-8">
           <div id="cabildos">
           </div>
+        </div>
+      </div>
+      <div class="row" id="cabildo-details">
+        <div class="col-2">
+          <div id="back-button">
+            Back
+          </div>
+        </div>
+        <div class="col-8">
+          <div id="details">
+          </div>
+        </div>
+        <div class="col-2">
         </div>
       </div>
     </div>
