--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
           </div>
         </div>
         <div class="col-2">
+          <div id="up-button">
+            Up
+          </div>
         </div>
       </div>
     </div>
