--- a/index.html
+++ b/index.html
@@ -15,26 +15,48 @@
   <div class="row">
     <div class="col-12">
       <div class="row" id="sticky">
-        <div class="col-3">
-          <div class="form-group">
-             <label for="select-cabildo">Cabildo</label>
-             <select class="form-control" id="select-cabildo"></select>
+        <div class="row">
+          <div class="col-8">
+            <div class="row" id="title">
+              Sistematización y análisis de cabildos
+            </div>
+            <div class="row" id="subtitle">
+              Primera etapa participativa
+            </div>
           </div>
-         </div>
-         <div class="col-3">
-           <div class="form-group">
-              <label for="select-comision">Comision</label>
-              <select class="form-control" id="select-comision"></select>
+          <div class="col-2" id="methods">
+            Metodología
+          </div>
+          <div class="col-2" id="about">
+            Sobre el proyecto
           </div>
         </div>
-        <div class="col-3">
-          <div class="form-group">
-            <label for="select-tema">Tema</label>
-            <select class="form-control" id="select-tema"></select>
+        <div class="row">
+          <div class="col-3">
+            <div class="form-group">
+               <label for="select-cabildo">Cabildo</label>
+               <select class="form-control" id="select-cabildo"></select>
+            </div>
+           </div>
+           <div class="col-3">
+             <div class="form-group">
+                <label for="select-comision">Comision</label>
+                <select class="form-control" id="select-comision"></select>
+            </div>
           </div>
           <div class="col-3">
+            <div class="form-group">
+              <label for="select-tema">Tema</label>
+              <select class="form-control" id="select-tema"></select>
+            </div>
+          </div>
+          <div class="col-3">
+            <div id="how-to">
+              Como leer el gráfico
+            </div>
           </div>
         </div>
+
       </div>
       <div class="row" id="bubbles">
         <div class="col-4">
