add header style

--- a/index.html
+++ b/index.html
@@ -31,28 +31,33 @@
             Sobre el proyecto
           </div>
         </div>
-        <div class="row">
-          <div class="col-3">
-            <div class="form-group">
-               <label for="select-cabildo">Cabildo</label>
-               <select class="form-control" id="select-cabildo"></select>
-            </div>
-           </div>
-           <div class="col-3">
-             <div class="form-group">
-                <label for="select-comision">Comision</label>
-                <select class="form-control" id="select-comision"></select>
-            </div>
+        <div class="row" id="filters">
+          <div class="row" id="filters-title">
+            Filtrar
           </div>
-          <div class="col-3">
-            <div class="form-group">
-              <label for="select-tema">Tema</label>
-              <select class="form-control" id="select-tema"></select>
+          <div class="row">
+            <div class="col-3">
+              <div class="form-group">
+                 <label for="select-cabildo">Cabildo</label>
+                 <select class="form-control" id="select-cabildo"></select>
+              </div>
+             </div>
+             <div class="col-3">
+               <div class="form-group">
+                  <label for="select-comision">Comision</label>
+                  <select class="form-control" id="select-comision"></select>
+              </div>
             </div>
-          </div>
-          <div class="col-3">
-            <div id="how-to">
-              Como leer el gráfico
+            <div class="col-3">
+              <div class="form-group">
+                <label for="select-tema">Tema</label>
+                <select class="form-control" id="select-tema"></select>
+              </div>
+            </div>
+            <div class="col-3">
+              <div id="how-to">
+                Como leer el gráfico
+              </div>
             </div>
           </div>
         </div>
