--- a/index.html
+++ b/index.html
@@ -56,7 +56,142 @@
             </div>
             <div class="col-3">
               <div id="how-to">
-                Como leer el gráfico
+                Cómo leer el gráfico
+                <div id="legend">
+                  <div class="legend-subtitle row">
+                    Comisiones
+                  </div>
+                  <div class="legend-item row">
+                    <div class="col-1">
+                      <span class="legend-circle">
+                        <svg height="20" width="20">
+                          <circle cx="10" cy="10" r="8" stroke="#DCA755" stroke-width="1" fill="#f8f9fa" />
+                        </svg>
+                      </span>
+                    </div>
+                    <div class="col-11">
+                      1. Sistema Político, Gobierno, Poder Legislativo y Sistema Electoral
+                    </div>
+                  </div>
+                  <div class="legend-item row">
+                    <div class="col-1">
+                      <span class="legend-circle">
+                        <svg height="20" width="20">
+                          <circle cx="10" cy="10" r="8" stroke="#C23125" stroke-width="1" fill="#f8f9fa" />
+                        </svg>
+                      </span>
+                    </div>
+                    <div class="col-11">
+                      2. Sobre Principios Constitucionales, Democracia, Nacionalidad y Ciudadanía
+                    </div>
+                  </div>
+                  <div class="legend-item row">
+                    <div class="col-1">
+                      <span class="legend-circle">
+                        <svg height="20" width="20">
+                          <circle cx="10" cy="10" r="8" stroke="#678DC6" stroke-width="1" fill="#f8f9fa" />
+                        </svg>
+                      </span>
+                    </div>
+                    <div class="col-11">
+                      3. Forma de Estado, Ordenamiento, Autonomía, Descentrilación, Equidad, Justicia Territorial, Gobiernos Locales y Organización Fiscal
+                    </div>
+                  </div>
+                  <div class="legend-item row">
+                    <div class="col-1">
+                      <span class="legend-circle">
+                        <svg height="20" width="20">
+                          <circle cx="10" cy="10" r="8" stroke="#9B1560" stroke-width="1" fill="#f8f9fa" />
+                        </svg>
+                      </span>
+                    </div>
+                    <div class="col-11">
+                      4. Derechos Fundamentales
+                    </div>
+                  </div>
+                  <div class="legend-item row">
+                    <div class="col-1">
+                      <span class="legend-circle">
+                        <svg height="20" width="20">
+                          <circle cx="10" cy="10" r="8" stroke="#60AA58" stroke-width="1" fill="#f8f9fa" />
+                        </svg>
+                      </span>
+                    </div>
+                    <div class="col-11">
+                      5. Medio Ambiente, Derechos de la Naturaleza, Bienes Naturales y Modelo Económico
+                    </div>
+                  </div>
+                  <div class="legend-item row">
+                    <div class="col-1">
+                      <span class="legend-circle">
+                        <svg height="20" width="20">
+                          <circle cx="10" cy="10" r="8" stroke="#DCA755" stroke-width="1" fill="#f8f9fa" />
+                        </svg>
+                      </span>
+                    </div>
+                    <div class="col-11">
+                      6. Sistema de Justicia, Órganos Autónomos de Control y Reforma Constitucional
+                    </div>
+                  </div>
+                  <div class="legend-item row">
+                    <div class="col-1">
+                      <span class="legend-circle">
+                        <svg height="20" width="20">
+                          <circle cx="10" cy="10" r="8" stroke="#DCA755" stroke-width="1" fill="#f8f9fa" />
+                        </svg>
+                      </span>
+                    </div>
+                    <div class="col-11">
+                      7. Sistemas de Conocimientos, Culturas, Ciencia, Tecnología, Artes y Patrimonios
+                    </div>
+                  </div>
+                  <div class="legend-subtitle row">
+                    Tamaño cabildos
+                  </div>
+                  <div class="legend-item row">
+                    De acuerdo a la cantidad de instancias
+                  </div>
+                  <div class="legend-item row">
+                    <div class="col-2">
+                      <svg width="37" height="37" viewBox="0 0 37 37" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M-8.08661e-07 18.5C-1.25527e-06 28.7173 8.28273 37 18.5 37C28.7173 37 37 28.7173 37 18.5C37 8.28273 28.7173 -3.6205e-07 18.5 -8.08661e-07C8.28273 -1.25527e-06 -3.6205e-07 8.28273 -8.08661e-07 18.5Z" fill="#CED4DA"/>
+                      </svg>
+                    </div>
+                    <div class="col-3">
+                      <svg width="59" height="8" viewBox="0 0 59 8" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M58.3536 4.35355C58.5488 4.15829 58.5488 3.84171 58.3536 3.64645L55.1716 0.464466C54.9763 0.269204 54.6597 0.269204 54.4645 0.464466C54.2692 0.659728 54.2692 0.976311 54.4645 1.17157L57.2929 4L54.4645 6.82843C54.2692 7.02369 54.2692 7.34027 54.4645 7.53553C54.6597 7.7308 54.9763 7.7308 55.1716 7.53553L58.3536 4.35355ZM0 4.5H58V3.5H0V4.5Z" fill="#495057"/>
+                      </svg>
+                    </div>
+                    <div class="col-2">
+                      <svg width="71" height="71" viewBox="0 0 71 71" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M-1.55175e-06 35.5C-2.40876e-06 55.1061 15.8939 71 35.5 71C55.1061 71 71 55.1061 71 35.5C71 15.8939 55.1061 -6.94744e-07 35.5 -1.55175e-06C15.8939 -2.40876e-06 -6.94744e-07 15.8939 -1.55175e-06 35.5Z" fill="#CED4DA"/>
+                      </svg>
+                    </div>
+                  </div>
+                  <div class="legend-subtitle row">
+                    Tamaño temas
+                  </div>
+                  <div class="legend-item row">
+                    De acuerdo al porcentaje de instancias de la temáticas
+                  </div>
+                  <div class="legend-item row">
+                    <div class="col-2">
+                      <svg width="39" height="39" viewBox="0 0 39 39" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M0.999999 19.5C0.999999 29.7173 9.28273 38 19.5 38C29.7173 38 38 29.7173 38 19.5C38 9.28273 29.7173 1 19.5 0.999999C9.28273 0.999999 1 9.28273 0.999999 19.5Z" fill="#F8F9FA" stroke="#343A40" stroke-miterlimit="10"/>
+                      </svg>
+                    </div>
+                    <div class="col-3">
+                      <svg width="59" height="8" viewBox="0 0 59 8" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M58.3536 4.35355C58.5488 4.15829 58.5488 3.84171 58.3536 3.64645L55.1716 0.464466C54.9763 0.269204 54.6597 0.269204 54.4645 0.464466C54.2692 0.659728 54.2692 0.976311 54.4645 1.17157L57.2929 4L54.4645 6.82843C54.2692 7.02369 54.2692 7.34027 54.4645 7.53553C54.6597 7.7308 54.9763 7.7308 55.1716 7.53553L58.3536 4.35355ZM0 4.5H58V3.5H0V4.5Z" fill="#495057"/>
+                      </svg>
+                    </div>
+                    <div class="col-2">
+                      <svg width="73" height="73" viewBox="0 0 73 73" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M0.999998 36.5C0.999998 56.1061 16.8939 72 36.5 72C56.1061 72 72 56.1061 72 36.5C72 16.8939 56.1061 0.999999 36.5 0.999998C16.8939 0.999998 0.999999 16.8939 0.999998 36.5Z" fill="#F8F9FA" stroke="#343A40" stroke-miterlimit="10"/>
+                      </svg>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
