--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
              </div>
              <div class="col-3">
                <div class="form-group">
-                  <label for="select-comision">Comision</label>
+                  <label for="select-comision">Comisión</label>
                   <select class="form-control" id="select-comision"></select>
               </div>
             </div>
@@ -200,8 +200,7 @@
       </div>
       <div class="row" id="bubbles">
         <div class="col-4">
-          <div id="overview">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          <div id="overview">Esta plataforma muestra los resultados del proceso de sistematización para ocho instancias independientes de participación ciudadana en los periodos 2019-2022. Debido a la amplia diversidad de contexto, muestreo y tipo de información, se optó por sistematizar cada instancia de manera independiente. Los resultados expuestos no son representativos de Chile, sino más bien la organización de diferentes ejercicios participativos con distintos enfoques.
           </div>
           <div id="tooltip">
           </div>
