more styling y shortnames de temas agregados

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                         <i class="bi bi-plus-circle"></i>
                       </div>
                     </div>
-                    <div id="legend" style="padding: 12px;">
+                    <div id="legend" style="padding: 12px; margin-top: 10px; margin-left: -10px">
                       <div class="legend-subtitle row">
                         <strong>Comisiones</strong>
                       </div>
@@ -159,50 +159,52 @@
                         </div>
                       </div>
                       <div class="legend-subtitle row">
-                        Tamaño cabildos
+                        <strong>Tamaño cabildos</strong>
                       </div>
-                      <div class="legend-item row">
-                        De acuerdo a la cantidad de instancias
-                      </div>
-                      <div class="legend-item row">
-                        <div class="col-2">
-                          <svg width="37" height="37" viewBox="0 0 37 37" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M-8.08661e-07 18.5C-1.25527e-06 28.7173 8.28273 37 18.5 37C28.7173 37 37 28.7173 37 18.5C37 8.28273 28.7173 -3.6205e-07 18.5 -8.08661e-07C8.28273 -1.25527e-06 -3.6205e-07 8.28273 -8.08661e-07 18.5Z" fill="#CED4DA"/>
-                          </svg>
-                        </div>
-                        <div class="col-3">
-                          <svg width="59" height="8" viewBox="0 0 59 8" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M58.3536 4.35355C58.5488 4.15829 58.5488 3.84171 58.3536 3.64645L55.1716 0.464466C54.9763 0.269204 54.6597 0.269204 54.4645 0.464466C54.2692 0.659728 54.2692 0.976311 54.4645 1.17157L57.2929 4L54.4645 6.82843C54.2692 7.02369 54.2692 7.34027 54.4645 7.53553C54.6597 7.7308 54.9763 7.7308 55.1716 7.53553L58.3536 4.35355ZM0 4.5H58V3.5H0V4.5Z" fill="#495057"/>
-                          </svg>
-                        </div>
-                        <div class="col-2">
-                          <svg width="71" height="71" viewBox="0 0 71 71" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M-1.55175e-06 35.5C-2.40876e-06 55.1061 15.8939 71 35.5 71C55.1061 71 71 55.1061 71 35.5C71 15.8939 55.1061 -6.94744e-07 35.5 -1.55175e-06C15.8939 -2.40876e-06 -6.94744e-07 15.8939 -1.55175e-06 35.5Z" fill="#CED4DA"/>
-                          </svg>
-                        </div>
-                      </div>
-                      <div class="legend-subtitle row">
-                        Tamaño temas
-                      </div>
-                      <div class="legend-item row">
-                        De acuerdo al porcentaje de instancias de la temáticas
-                      </div>
-                      <div class="legend-item row">
-                        <div class="col-2">
-                          <svg width="39" height="39" viewBox="0 0 39 39" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M0.999999 19.5C0.999999 29.7173 9.28273 38 19.5 38C29.7173 38 38 29.7173 38 19.5C38 9.28273 29.7173 1 19.5 0.999999C9.28273 0.999999 1 9.28273 0.999999 19.5Z" fill="#F8F9FA" stroke="#343A40" stroke-miterlimit="10"/>
-                          </svg>
-                        </div>
-                        <div class="col-3">
-                          <svg width="59" height="8" viewBox="0 0 59 8" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M58.3536 4.35355C58.5488 4.15829 58.5488 3.84171 58.3536 3.64645L55.1716 0.464466C54.9763 0.269204 54.6597 0.269204 54.4645 0.464466C54.2692 0.659728 54.2692 0.976311 54.4645 1.17157L57.2929 4L54.4645 6.82843C54.2692 7.02369 54.2692 7.34027 54.4645 7.53553C54.6597 7.7308 54.9763 7.7308 55.1716 7.53553L58.3536 4.35355ZM0 4.5H58V3.5H0V4.5Z" fill="#495057"/>
-                          </svg>
-                        </div>
-                        <div class="col-2">
-                          <svg width="73" height="73" viewBox="0 0 73 73" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M0.999998 36.5C0.999998 56.1061 16.8939 72 36.5 72C56.1061 72 72 56.1061 72 36.5C72 16.8939 56.1061 0.999999 36.5 0.999998C16.8939 0.999998 0.999999 16.8939 0.999998 36.5Z" fill="#F8F9FA" stroke="#343A40" stroke-miterlimit="10"/>
-                          </svg>
-                        </div>
+                        <div class="container">
+                          <div class="legend-item row">
+                            De acuerdo a la cantidad de instancias
+                          </div>
+                          <div class="legend-item row">
+                            <div class="col-2">
+                              <svg width="37" height="37" viewBox="0 0 37 37" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M-8.08661e-07 18.5C-1.25527e-06 28.7173 8.28273 37 18.5 37C28.7173 37 37 28.7173 37 18.5C37 8.28273 28.7173 -3.6205e-07 18.5 -8.08661e-07C8.28273 -1.25527e-06 -3.6205e-07 8.28273 -8.08661e-07 18.5Z" fill="#CED4DA"/>
+                              </svg>
+                            </div>
+                            <div class="col-3">
+                              <svg width="59" height="8" viewBox="0 0 59 8" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M58.3536 4.35355C58.5488 4.15829 58.5488 3.84171 58.3536 3.64645L55.1716 0.464466C54.9763 0.269204 54.6597 0.269204 54.4645 0.464466C54.2692 0.659728 54.2692 0.976311 54.4645 1.17157L57.2929 4L54.4645 6.82843C54.2692 7.02369 54.2692 7.34027 54.4645 7.53553C54.6597 7.7308 54.9763 7.7308 55.1716 7.53553L58.3536 4.35355ZM0 4.5H58V3.5H0V4.5Z" fill="#495057"/>
+                              </svg>
+                            </div>
+                            <div class="col-2">
+                              <svg width="71" height="71" viewBox="0 0 71 71" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M-1.55175e-06 35.5C-2.40876e-06 55.1061 15.8939 71 35.5 71C55.1061 71 71 55.1061 71 35.5C71 15.8939 55.1061 -6.94744e-07 35.5 -1.55175e-06C15.8939 -2.40876e-06 -6.94744e-07 15.8939 -1.55175e-06 35.5Z" fill="#CED4DA"/>
+                              </svg>
+                            </div>
+                          </div>
+                          <div class="legend-subtitle row">
+                            Tamaño temas
+                          </div>
+                          <div class="legend-item row">
+                            De acuerdo al porcentaje de instancias de la temáticas
+                          </div>
+                          <div class="legend-item row">
+                            <div class="col-2">
+                              <svg width="39" height="39" viewBox="0 0 39 39" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M0.999999 19.5C0.999999 29.7173 9.28273 38 19.5 38C29.7173 38 38 29.7173 38 19.5C38 9.28273 29.7173 1 19.5 0.999999C9.28273 0.999999 1 9.28273 0.999999 19.5Z" fill="#F8F9FA" stroke="#343A40" stroke-miterlimit="10"/>
+                              </svg>
+                            </div>
+                            <div class="col-3">
+                              <svg width="59" height="8" viewBox="0 0 59 8" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M58.3536 4.35355C58.5488 4.15829 58.5488 3.84171 58.3536 3.64645L55.1716 0.464466C54.9763 0.269204 54.6597 0.269204 54.4645 0.464466C54.2692 0.659728 54.2692 0.976311 54.4645 1.17157L57.2929 4L54.4645 6.82843C54.2692 7.02369 54.2692 7.34027 54.4645 7.53553C54.6597 7.7308 54.9763 7.7308 55.1716 7.53553L58.3536 4.35355ZM0 4.5H58V3.5H0V4.5Z" fill="#495057"/>
+                              </svg>
+                            </div>
+                            <div class="col-2">
+                              <svg width="73" height="73" viewBox="0 0 73 73" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M0.999998 36.5C0.999998 56.1061 16.8939 72 36.5 72C56.1061 72 72 56.1061 72 36.5C72 16.8939 56.1061 0.999999 36.5 0.999998C16.8939 0.999998 0.999999 16.8939 0.999998 36.5Z" fill="#F8F9FA" stroke="#343A40" stroke-miterlimit="10"/>
+                              </svg>
+                            </div>
+                          </div>  
                       </div>
                     </div>
                   </div>
@@ -211,7 +213,6 @@
             </div>
           </div>  
         </div>
-
         <div class="row" id="bubbles">
           <div class="col-4">
             <div id="overview">Esta plataforma muestra los resultados del proceso de sistematización para ocho instancias independientes de participación ciudadana en los periodos 2019-2022. Debido a la amplia diversidad de contexto, muestreo y tipo de información, se optó por sistematizar cada instancia de manera independiente. Los resultados expuestos no son representativos de Chile, sino más bien la organización de diferentes ejercicios participativos con distintos enfoques.
@@ -224,7 +225,6 @@
             </div>
           </div>
         </div>
-
         <div class="row" id="cabildo-details">
           <div class="col-1">
             <div id="back-button" class="btn btn-outline-primary" style="margin-top: 50px;">
@@ -233,6 +233,10 @@
           </div>
           <div class="col-10">
             <div id="details">
+              <!-- Acá hay que agregar este gráfico solo para plataforma cc
+              <div id="cc" class="container-fluid">
+                <img src="assets/ranking-periodo.svg">
+              </div> -->
             </div>
           </div>
           <div class="col-1">
