--- a/index.html
+++ b/index.html
@@ -182,9 +182,11 @@
                               </svg>
                             </div>
                           </div>
-                          <div class="legend-subtitle row">
-                            Tamaño temas
-                          </div>
+                        </div>
+                        <div class="legend-subtitle row">
+                          <strong>Tamaño temas</strong>
+                        </div>
+                        <div class="container">
                           <div class="legend-item row">
                             De acuerdo al porcentaje de instancias de la temáticas
                           </div>
