vertically align items in legend

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                           <div class="legend-item row">
                             De acuerdo a la cantidad de instancias
                           </div>
-                          <div class="legend-item row">
+                          <div class="legend-item legend-svg row">
                             <div class="col-2">
                               <svg width="37" height="37" viewBox="0 0 37 37" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M-8.08661e-07 18.5C-1.25527e-06 28.7173 8.28273 37 18.5 37C28.7173 37 37 28.7173 37 18.5C37 8.28273 28.7173 -3.6205e-07 18.5 -8.08661e-07C8.28273 -1.25527e-06 -3.6205e-07 8.28273 -8.08661e-07 18.5Z" fill="#CED4DA"/>
@@ -190,7 +190,7 @@
                           <div class="legend-item row">
                             De acuerdo al porcentaje de instancias de la temáticas
                           </div>
-                          <div class="legend-item row">
+                          <div class="legend-item legend-svg row">
                             <div class="col-2">
                               <svg width="39" height="39" viewBox="0 0 39 39" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M0.999999 19.5C0.999999 29.7173 9.28273 38 19.5 38C29.7173 38 38 29.7173 38 19.5C38 9.28273 29.7173 1 19.5 0.999999C9.28273 0.999999 1 9.28273 0.999999 19.5Z" fill="#F8F9FA" stroke="#343A40" stroke-miterlimit="10"/>
