fix positioning of scroll when clicking on a circle

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
         </div>
         <div class="row" id="cabildo-details">
           <div class="col-1">
-            <div id="back-button" class="btn btn-outline-primary" style="margin-top: 50px;">
+            <div id="back-button" class="btn btn-outline-primary">
               Volver
             </div>
           </div>
