--- a/index.html
+++ b/index.html
@@ -217,7 +217,11 @@
         </div>
         <div class="row" id="bubbles">
           <div class="col-4">
-            <div id="overview">Esta plataforma muestra los resultados del proceso de sistematización para ocho instancias independientes de participación ciudadana en los periodos 2019-2022. Debido a la amplia diversidad de contexto, muestreo y tipo de información, se optó por sistematizar cada instancia de manera independiente. Los resultados expuestos no son representativos de Chile, sino más bien la organización de diferentes ejercicios participativos con distintos enfoques.
+            <div id="overview">
+              <p>Esta plataforma muestra los resultados del proceso de sistematización para ocho instancias independientes de participación ciudadana en los periodos 2019-2022. Debido a la amplia diversidad de contexto, muestreo y tipo de información, se optó por sistematizar cada instancia de manera independiente. Los resultados expuestos no son representativos de Chile, sino más bien la organización de diferentes ejercicios participativos con distintos enfoques.
+              </p>
+              <p>Cada círculo gris representa un cabildo, el diámetro representa la cantidad de instancias. Dentro de los círculos se encuentran las temáticas abordadas en cada uno de los cabildos y los diámetros representan la cantidad de instancias que comprende esa temática.
+              </p>
             </div>
             <div id="tooltip">
             </div>
