cabildo-details-style-changes

--- a/index.html
+++ b/index.html
@@ -232,22 +232,18 @@
           </div>
         </div>
         <div class="row" id="cabildo-details">
-          <div class="col-1">
+          <div class="col-2">
             <div id="back-button" class="btn btn-outline-primary">
               Volver
             </div>
           </div>
-          <div class="col-10">
+          <div class="col-8">
             <div id="details">
-              <!-- Acá hay que agregar este gráfico solo para plataforma cc
-              <div id="cc" class="container-fluid">
-                <img src="assets/ranking-periodo.svg">
-              </div> -->
             </div>
           </div>
           <div class="col-1">
             <div id="up-button" class="btn btn-fab">
-              <i class="bi bi-arrow-up-short" style="font-size: 1.5rem; padding-right:2px; padding-left:2px;"></i>
+              <i class="bi bi-arrow-up-short" style="font-size: 1.5rem"></i>
             </div>
           </div>
         </div>
