fix sticky for mobile

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div class="row" id="sticky">
         <div class="col-12">
           <div class="row" style="margin-top:12px; margin-bottom:12px; margin-left: 2px;">
-            <div class="col-9">
+            <div class="col-8">
               <div class="row" id="title">
                 Plataforma de resultados
               </div>
@@ -25,15 +25,15 @@
                 Cabildos 2019 - 2022
               </div>
             </div>
-            <div class="col-3" id="about">
+            <div class="col-4" id="about">
               <a href="methods.html" class="menu-links"><h6>Sobre el proyecto</h6></a>
             </div>
           </div>
           <div class="row" id="filters" style="padding-top: 12px; padding-bottom: 12px;background-color: var(--bs-gray-100);">
-            <div class="col-1" id="filters-title">
+            <div class="col-sm-1" id="filters-title">
               Filtros
             </div>
-            <div class="col-6" style="border-right: 0.5px dashed var(--cc-primary)">
+            <div class="col-sm-6" id="dropdowns">
               <div class="row">
                 <div class="col-4">
                   <div class="form-group">
@@ -55,7 +55,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-5">
+            <div class="col-md-5 col-sm-6">
               <div id="how-to" style="padding: 10px; margin-top: 16px;">
                 <div class="row">
                   <div class="col-11">
@@ -210,7 +210,7 @@
           </div>
         </div>
         <div class="row" id="bubbles">
-          <div class="col-3">
+          <div class="col-md-3">
             <div id="overview">
               <p>Esta plataforma muestra los resultados del proceso de sistematización para ocho instancias independientes de participación ciudadana en los periodos 2019-2022. Debido a la amplia diversidad de contexto, muestreo y tipo de información, se optó por sistematizar cada instancia de manera independiente. Los resultados expuestos no son representativos de Chile, sino más bien la organización de diferentes ejercicios participativos con distintos enfoques.
               </p>
@@ -220,7 +220,7 @@
             <div id="tooltip">
             </div>
           </div>
-          <div class="col-9">
+          <div class="col-md-9">
             <div id="cabildos">
             </div>
           </div>
