fix spacing for mobile

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
           </div>
         </div>
         <div class="row" id="cabildo-details">
-          <div class="col-8 offset-2">
+          <div class="col-sm-8 offset-2">
             <div id="details">
             </div>
           </div>
